# offset-spiking

./: .gitignore  CMakeLists.txt  README.md
include/: Cell.h  CholinergicSynapse.h  KenyonCell.h  Network.h  Synapse.h  VoltageClamp.h  clamp_test.h  epsp_histogram.h  input_test.h  kc_threshold.h  offset_test.h  plot_Vs.h  run_once.h  synapse_cpp.h  time_constant.h
src/: Cell.cpp  CholinergicSynapse.cpp  KenyonCell.cpp  Network.cpp  Synapse.cpp  TODO  VoltageClamp.cpp  cell_cpp.cpp  clamp_test.cpp  epsp_histogram.cpp  input_test.cpp  kc_threshold.cpp  main.cpp  network_cpp.cpp  offset_test.cpp  plot_Vs.cpp  run_once.cpp  synapse_cpp.cpp  time_constant.cpp
src/matlab/: create_psths.m  create_trial.m  load_trials.m  supertitle.m
src/matlab/figures/epsp histogram/: epsphistogram.fig
src/matlab/figures/figs 121515/: fig1-10ms-noiseless.fig  fig2-10ms-noisy.fig  fig3-20ms-noiseless.fig  fig4-20ms-noisy.fig
src/matlab/figures/figure1 10ms psths/: psths10ms.fig
src/matlab/figures/figure2 20ms psths/: psth20ms.fig
src/matlab/figures/figure3 30ms psths/: psths30ms.fig
src/matlab/scripts/: script031116_finalpsths.m  script032116_kccombinatorics.m  script101415_viztrials.m  script102815_epsphistogram.m  script121115_noisypsths.m
